--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ rhb-print-A4\.pdf
 rhb-print-A4\.synctex\.gz
 
 rhb-print-A4\.toc
+
+pdf/rhb-print-vhf-A4\.pdf
+
+rhb-print-vhf-A4\.out
+
+rhb-print-vhf-A4\.toc
