--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,11 @@
-
-*.aux
-
-*.log
-
-rhb-print-A4\.out
-
-rhb-print-A4\.pdf
-
-rhb-print-A4\.synctex\.gz
-
-rhb-print-A4\.toc
-
-pdf/rhb-print-vhf-A4\.pdf
-
-rhb-print-vhf-A4\.out
-
-rhb-print-vhf-A4\.toc
-
 pdf/
-
 *.out
-
 *.toc
-
 *.bbl
-
 *.blg
-
 *.pdf
-
 *.gz
-
-*.tex~
+*~
+*.tdo
+*.aux
+*.log
